# python-ai-basic-lab

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  stock_practice_utils.py
DOCS/: Dict.md  README.md  ai_ml_formula_to_code_mapping_ko.md  ai_ml_python_examples_expanded_ko.md  chapter01_99_restructured_ko.md  chapter22_30_index_ko.md  chapter22_expanded_ko.md  chapter23_expanded_ko.md  chapter24_expanded_ko.md  chapter25_expanded_ko.md  chapter26_expanded_ko.md  chapter27_expanded_ko.md  chapter28_expanded_ko.md  chapter29_expanded_ko.md  chapter30_expanded_ko.md  linear_regression_terms_in_code_ko.md
data/: dart_company_profiles.csv  dart_disclosures.csv  dart_fundamentals.csv  dart_invest_pipeline.csv  experiment_log.csv  external_invest_ml_dataset.csv  external_macro_pipeline.csv  financial_statements.csv  gender_approval.csv  macro_fred_signals.csv  personal_info.csv  stock_ohlcv.csv  stock_universe.csv  stocks_features.csv  student_performance.csv  traffic_timeseries.csv  world_bank_korea_indicators.csv
doc/: 08.md  10.md  20.md  21.md  22.md  23.md  25.md  27.md
docs/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  Dict.md  README.md  a.md  ai_ml_python_examples_expanded_ko.md  chapter23_expanded_ko.md  chapter29_expanded_ko.md  chapter30_expanded_ko.md  financial_indicators_code_ko.md  quant_finance_curriculum_ko.md  sampel1.md  sample1.md  voca.md  webapp-backend.md
docs2/: 17.md  (+2 more)
(+570 files in other folders)
